@@ -67,12 +67,15 @@
 <from dir="/usr/LIB/xorg/modules">
   libpcidata.so
   drivers/fbdev_drv.so
+  drivers/vesa_drv.so
   input/wacom_drv.so
   input/mouse_drv.so
   input/kbd_drv.so
   linux/libfbdevhw.so
   libfb.so
+  libint10.so
   libshadow.so
+  libvbe.so
 </from>
 
 <from dir="/usr/share/X11/xkb">
