@@ -1,3 +1,7 @@
+- add "vesa" X driver to use when framebuffer fails
+  (useful for boxes which work with vga=785 which is not the default, in that
+  case "vesa" should work)
+
 Version 10.6.12 - 28 January 2008
 
 - 2008.1 beta2 logo
